ci-scripts/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: face-app
  labels:
    app.kubernetes.io/part-of: face-microservice
---
apiVersion: v1
kind: Namespace
metadata:
  name: face-infra
  labels:
    app.kubernetes.io/part-of: face-microservice
